--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -1,29 +1,76 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1, 3, 5, 6\n",
+    "\n",
+    "# from sklearn.model_selection import StratifiedGroupKFold\n",
+    "\n",
+    "# strange_series = [\n",
+    "#     \"05e1944c3818\",  # 1\n",
+    "#     \"13b4d6a01d27\",  # 4\n",
+    "#     \"7476c0bd18d2\",  # 3\n",
+    "#     \"5aad18e7ce64\",  # 2\n",
+    "#     \"aed3850f65f0\",  # 5\n",
+    "#     \"c5365a55ebb7\",  # 2\n",
+    "#     \"f981a0805fd0\",  # 4\n",
+    "#     \"0f9e60a8e56d\",  # 3\n",
+    "#     \"2fc653ca75c7\",  # 5\n",
+    "#     \"390b487231ce\",  # 4\n",
+    "#     \"89c7daa72eee\",  # 1\n",
+    "#     \"a3e59c2ce3f6\",  # 5\n",
+    "#     \"c5d08fc3e040\",  # 3\n",
+    "#     \"c7b1283bb7eb\",  # 2\n",
+    "#     \"e11b9d69f856\",  # 1\n",
+    "# ]\n",
+    "\n",
+    "# x = pd.read_csv(\"../data/child-mind-institute-detect-sleep-states/train_events.csv\")\n",
+    "# x[\"is_strange\"] = 0\n",
+    "# x[\"fold\"] = 0\n",
+    "# x.loc[x[\"series_id\"].isin(strange_series), \"is_strange\"] = 1\n",
+    "\n",
+    "# sgkf = StratifiedGroupKFold(n_splits=7)\n",
+    "\n",
+    "# x = x[x[\"event\"] == \"onset\"].reset_index(drop=True)\n",
+    "# X = x[[\"night\"]]\n",
+    "# y = x[\"is_strange\"]\n",
+    "# groups = x[\"series_id\"]\n",
+    "\n",
+    "# res = \"\"\n",
+    "\n",
+    "# for i, (train_index, test_index) in enumerate(sgkf.split(X, y, groups)):\n",
+    "#     series = x.loc[test_index, \"series_id\"].unique()\n",
+    "#     x.loc[test_index, \"fold\"] = i\n",
+    "#     print(x.loc[test_index, \"step\"].isna().sum())\n",
+    "\n",
+    "#     for s in series:\n",
+    "#         res += f\"- {s}\\n\"\n",
+    "#     res += \"\\n\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Ideas\n",
-    "\n",
-    "- add 3 folds scheme\n",
-    "\n",
-    "- simplify transformer if it works - add it to the stage below\n",
-    "- try increased twice duration with decreased twice epochs + decrease wd to 1e-5\n",
     "\n",
     "- fix DETR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2632110/3308245386.py:41: UserWarning: \n",
+      "/tmp/ipykernel_2632110/3043315833.py:41: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -54,7 +101,7 @@
     "plt.style.use(\"ggplot\")\n",
     "\n",
     "INFERENCE = False\n",
-    "EXP_NAME = \"transformer_folds_10\"\n",
+    "EXP_NAME = \"transformer_folds_7_lstm\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
@@ -86,7 +133,7 @@
     "    keys = np.load(RESULT_DIR / f\"keys.npy\")\n",
     "else:\n",
     "    preds, labels, keys = None, None, None\n",
-    "    for i in range(10):\n",
+    "    for i in range(7):\n",
     "        tmp_preds = np.load(RESULT_DIR / f\"run{i}\" / f\"preds_{TYPE}.npy\")\n",
     "        tmp_labels = np.load(RESULT_DIR / f\"run{i}\" / f\"labels_{TYPE}.npy\")\n",
     "        tmp_keys = np.load(RESULT_DIR / f\"run{i}\" / \"keys.npy\")\n",
@@ -119,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7625164054066758, 133717)"
+       "(0.6707851650592838, 470660)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,21 +423,21 @@
     "    sub_df = pd.DataFrame(records).sort_values([\"series_id\", \"step\"]).reset_index(drop=True)\n",
     "    sub_df[\"row_id\"] = np.arange(len(sub_df))\n",
     "\n",
-    "    # delete onset and wakeup events that are too far from the same events with high score\n",
-    "    high_score_event_threshold = 17280 * 1.01  # 24 hours\n",
-    "    sub_df = clean_weak_events(sub_df, high_score_event_threshold)\n",
+    "    # # delete onset and wakeup events that are too far from the same events with high score\n",
+    "    # high_score_event_threshold = 17280 * 1.01  # 24 hours\n",
+    "    # sub_df = clean_weak_events(sub_df, high_score_event_threshold)\n",
     "\n",
-    "    # delete onset and wakeup events that are too far from next wakeup / previous onset event\n",
-    "    event_threshold = 14400  # 20 hours\n",
-    "    sub_df = clean_too_far_events(sub_df, event_threshold)\n",
+    "    # # delete onset and wakeup events that are too far from next wakeup / previous onset event\n",
+    "    # event_threshold = 14400  # 20 hours\n",
+    "    # sub_df = clean_too_far_events(sub_df, event_threshold)\n",
     "\n",
-    "    # detect alone onset event that are between two other onset events and delete them\n",
-    "    alone_threshold = 2880  # 2 hours\n",
-    "    sub_df = delete_alone_events(sub_df, alone_threshold)\n",
+    "    # # detect alone onset event that are between two other onset events and delete them\n",
+    "    # alone_threshold = 2880  # 2 hours\n",
+    "    # sub_df = delete_alone_events(sub_df, alone_threshold)\n",
     "\n",
-    "    # delete events that are among many different events\n",
-    "    close_threshold = 360  # 30 minutes\n",
-    "    sub_df = delete_events_among_differnet_evnets(sub_df, close_threshold)\n",
+    "    # # delete events that are among many different events\n",
+    "    # close_threshold = 360  # 30 minutes\n",
+    "    # sub_df = delete_events_among_differnet_evnets(sub_df, close_threshold)\n",
     "\n",
     "    sub_df = sub_df[[\"row_id\", \"series_id\", \"step\", \"event\", \"score\"]]\n",
     "\n",
@@ -400,7 +447,7 @@
     "with open(Path(cfg.dir.processed_dir) / \"train\" / \"series_lens.json\") as f:\n",
     "    series_lens = json.load(f)\n",
     "\n",
-    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0005, distance=90, offset=8)\n",
+    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0001, distance=70, offset=8)\n",
     "# pred_df = pred_df.to_pandas()\n",
     "\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -414,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 0.7622137758555847, 133851 - 7 folds, score_th=0.0005, distance=90"
+    "# (0.7675050274210242, 468368)"
    ]
   },
   {
