Return everything as it was

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -2,54 +2,364 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "595\n",
+      "617\n",
+      "538\n",
+      "713\n"
+     ]
+    }
+   ],
    "source": [
     "# 1, 3, 5, 6\n",
     "\n",
-    "# from sklearn.model_selection import StratifiedGroupKFold\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
     "\n",
-    "# strange_series = [\n",
-    "#     \"05e1944c3818\",  # 1\n",
-    "#     \"13b4d6a01d27\",  # 4\n",
-    "#     \"7476c0bd18d2\",  # 3\n",
-    "#     \"5aad18e7ce64\",  # 2\n",
-    "#     \"aed3850f65f0\",  # 5\n",
-    "#     \"c5365a55ebb7\",  # 2\n",
-    "#     \"f981a0805fd0\",  # 4\n",
-    "#     \"0f9e60a8e56d\",  # 3\n",
-    "#     \"2fc653ca75c7\",  # 5\n",
-    "#     \"390b487231ce\",  # 4\n",
-    "#     \"89c7daa72eee\",  # 1\n",
-    "#     \"a3e59c2ce3f6\",  # 5\n",
-    "#     \"c5d08fc3e040\",  # 3\n",
-    "#     \"c7b1283bb7eb\",  # 2\n",
-    "#     \"e11b9d69f856\",  # 1\n",
-    "# ]\n",
+    "strange_series = [\n",
+    "    \"05e1944c3818\",  # 1\n",
+    "    \"13b4d6a01d27\",  # 4\n",
+    "    \"7476c0bd18d2\",  # 3\n",
+    "    \"5aad18e7ce64\",  # 2\n",
+    "    \"aed3850f65f0\",  # 5\n",
+    "    \"c5365a55ebb7\",  # 2\n",
+    "    \"f981a0805fd0\",  # 4\n",
+    "    \"0f9e60a8e56d\",  # 3\n",
+    "    \"2fc653ca75c7\",  # 5\n",
+    "    \"390b487231ce\",  # 4\n",
+    "    \"89c7daa72eee\",  # 1\n",
+    "    \"a3e59c2ce3f6\",  # 5\n",
+    "    \"c5d08fc3e040\",  # 3\n",
+    "    \"c7b1283bb7eb\",  # 2\n",
+    "    \"e11b9d69f856\",  # 1\n",
+    "]\n",
     "\n",
-    "# x = pd.read_csv(\"../data/child-mind-institute-detect-sleep-states/train_events.csv\")\n",
-    "# x[\"is_strange\"] = 0\n",
-    "# x[\"fold\"] = 0\n",
-    "# x.loc[x[\"series_id\"].isin(strange_series), \"is_strange\"] = 1\n",
+    "x = pd.read_csv(\"../data/child-mind-institute-detect-sleep-states/train_events.csv\")\n",
+    "x[\"is_strange\"] = 0\n",
+    "x[\"fold\"] = 0\n",
+    "x.loc[x[\"series_id\"].isin(strange_series), \"is_strange\"] = 1\n",
     "\n",
-    "# sgkf = StratifiedGroupKFold(n_splits=7)\n",
+    "sgkf = StratifiedGroupKFold(n_splits=4)\n",
     "\n",
-    "# x = x[x[\"event\"] == \"onset\"].reset_index(drop=True)\n",
-    "# X = x[[\"night\"]]\n",
-    "# y = x[\"is_strange\"]\n",
-    "# groups = x[\"series_id\"]\n",
+    "x = x[x[\"event\"] == \"onset\"].reset_index(drop=True)\n",
+    "X = x[[\"night\"]]\n",
+    "y = x[\"is_strange\"]\n",
+    "groups = x[\"series_id\"]\n",
     "\n",
-    "# res = \"\"\n",
+    "res = \"\"\n",
     "\n",
-    "# for i, (train_index, test_index) in enumerate(sgkf.split(X, y, groups)):\n",
-    "#     series = x.loc[test_index, \"series_id\"].unique()\n",
-    "#     x.loc[test_index, \"fold\"] = i\n",
-    "#     print(x.loc[test_index, \"step\"].isna().sum())\n",
+    "for i, (train_index, test_index) in enumerate(sgkf.split(X, y, groups)):\n",
+    "    series = x.loc[test_index, \"series_id\"].unique()\n",
+    "    x.loc[test_index, \"fold\"] = i\n",
+    "    print(x.loc[test_index, \"step\"].isna().sum())\n",
     "\n",
-    "#     for s in series:\n",
-    "#         res += f\"- {s}\\n\"\n",
-    "#     res += \"\\n\""
+    "    for s in series:\n",
+    "        res += f\"- {s}\\n\"\n",
+    "    res += \"\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 04f547b8017d\n",
+      "- 0a96f4993bd7\n",
+      "- 0cd1e3d0ed95\n",
+      "- 0d0ad1e77851\n",
+      "- 0f9e60a8e56d\n",
+      "- 12d01911d509\n",
+      "- 1762ab70ec76\n",
+      "- 188d4b7cd28b\n",
+      "- 1c7c0bad1263\n",
+      "- 280e08693c6d\n",
+      "- 292a75c0b94e\n",
+      "- 29c75c018220\n",
+      "- 29d3469bd15d\n",
+      "- 2fbbee1a38e3\n",
+      "- 349c5562ee2c\n",
+      "- 3df0da2e5966\n",
+      "- 4a31811f3558\n",
+      "- 4ab54be1a403\n",
+      "- 4ac356361be9\n",
+      "- 4feda0596965\n",
+      "- 55b7f5c99930\n",
+      "- 599ca4ed791b\n",
+      "- 5c088d7e916c\n",
+      "- 5f76965e10cf\n",
+      "- 5ffd5e1e81ac\n",
+      "- 6bf95a3cf91c\n",
+      "- 6ee4ade1f2bd\n",
+      "- 72bbd1ac3edf\n",
+      "- 7476c0bd18d2\n",
+      "- 76237b9406d5\n",
+      "- 78569a801a38\n",
+      "- 808652a666c6\n",
+      "- 844f54dcab89\n",
+      "- 87a6cbb7c4ed\n",
+      "- 8a306e0890c0\n",
+      "- 9277be28a1cf\n",
+      "- 99b829cbad2d\n",
+      "- 9aed9ee12ae2\n",
+      "- 9ddd40f2cb36\n",
+      "- 9ee455e4770d\n",
+      "- a2b0a64ec9cf\n",
+      "- ad425f3ee76d\n",
+      "- b1831c4979da\n",
+      "- b4b75225b224\n",
+      "- b750c8c1556c\n",
+      "- bb5612895813\n",
+      "- bf00506437aa\n",
+      "- c289c8a823e0\n",
+      "- c38707ef76df\n",
+      "- c5365a55ebb7\n",
+      "- c68260cc9e8f\n",
+      "- c7b1283bb7eb\n",
+      "- c7d693f24684\n",
+      "- cca14d1966c1\n",
+      "- d150801f3145\n",
+      "- d2fef7e4defd\n",
+      "- dacc6d652e35\n",
+      "- dfc3ccebfdc9\n",
+      "- dff367373725\n",
+      "- e1f2a4f991cb\n",
+      "- e30cb792a2bc\n",
+      "- e69aff66e0cb\n",
+      "- e8d0a37c3eba\n",
+      "- ebb6fae8ed43\n",
+      "- ebd76e93ec7d\n",
+      "- f2c2436cf7b7\n",
+      "- f7eb179216c2\n",
+      "- fbf33b1a2c10\n",
+      "- fcca183903b7\n",
+      "\n",
+      "- 03d92c9f6f8a\n",
+      "- 0402a003dae9\n",
+      "- 062cae666e2a\n",
+      "- 08db4255286f\n",
+      "- 137771d19ca2\n",
+      "- 16fe2798ed0f\n",
+      "- 1716cd4163b2\n",
+      "- 18b61dd5aae8\n",
+      "- 1955d568d987\n",
+      "- 1d4569cbac0f\n",
+      "- 1f96b9668bdf\n",
+      "- 207eded97727\n",
+      "- 2654a87be968\n",
+      "- 31011ade7c0a\n",
+      "- 3452b878e596\n",
+      "- 3664fe9233f9\n",
+      "- 3aceb17ef7bd\n",
+      "- 3d53bfea61d6\n",
+      "- 405df1b41f9f\n",
+      "- 416354edd92a\n",
+      "- 4743bdde25df\n",
+      "- 483d6545417f\n",
+      "- 55a47ff9dc8a\n",
+      "- 5aad18e7ce64\n",
+      "- 5acc9d63b5fd\n",
+      "- 5f40907ec171\n",
+      "- 60d31b0bec3b\n",
+      "- 612aa8ba44e2\n",
+      "- 6ca4f4fca6a2\n",
+      "- 703b5efa9bc1\n",
+      "- 72ba4a8afff4\n",
+      "- 7504165f497d\n",
+      "- 7fd4284b7ee8\n",
+      "- 804594bb1f06\n",
+      "- 83fa182bec3a\n",
+      "- 8898e6db816d\n",
+      "- 8fb18e36697d\n",
+      "- 91127c2b0e60\n",
+      "- 99237ce045e4\n",
+      "- 9a340507e36a\n",
+      "- 9c91c546e095\n",
+      "- a261bc4b7470\n",
+      "- a9a2f7fac455\n",
+      "- af91d9a50547\n",
+      "- b364205aba43\n",
+      "- b7fc34995d0f\n",
+      "- ba8083a2c3b8\n",
+      "- bdfce9ce62b9\n",
+      "- c535634d7dcd\n",
+      "- c5d08fc3e040\n",
+      "- c6788e579967\n",
+      "- ca730dbf521d\n",
+      "- ccdee561ee5d\n",
+      "- ce9164297046\n",
+      "- d043c0ca71cd\n",
+      "- d0f613c700f7\n",
+      "- d2d6b9af0553\n",
+      "- d93b0c7de16b\n",
+      "- db5e0ee1c0ab\n",
+      "- db75092f0530\n",
+      "- def21f50dd3c\n",
+      "- e6ddbaaf0639\n",
+      "- ea0770830757\n",
+      "- ece2561f07e9\n",
+      "- f564985ab692\n",
+      "- f6d2cc003183\n",
+      "- f981a0805fd0\n",
+      "- fa149c3c4bde\n",
+      "\n",
+      "- 05e1944c3818\n",
+      "- 062dbd4c95e6\n",
+      "- 0ce74d6d2106\n",
+      "- 0dee4fda51c3\n",
+      "- 10469f6765bf\n",
+      "- 10f8bc1f7b07\n",
+      "- 137b99e936ab\n",
+      "- 154fe824ed87\n",
+      "- 18a0ca03431d\n",
+      "- 1e6717d93c1d\n",
+      "- 25e2b3dd9c3b\n",
+      "- 27f09a6a858f\n",
+      "- 2b0a1fa8eba8\n",
+      "- 2b8d87addea9\n",
+      "- 33ceeba8918a\n",
+      "- 361366da569e\n",
+      "- 3665c86afaf5\n",
+      "- 3a9a9dc2cbd9\n",
+      "- 3c336d6ba566\n",
+      "- 449766346eb1\n",
+      "- 519ae2d858b0\n",
+      "- 51b23d177971\n",
+      "- 51fdcc8d9fe7\n",
+      "- 559ffb7c166a\n",
+      "- 5f94bb3e1bed\n",
+      "- 67f5fc60e494\n",
+      "- 6a4cd123bd69\n",
+      "- 6d6b9d22d48a\n",
+      "- 702bb5387b1e\n",
+      "- 72d2234e84e4\n",
+      "- 7822ee8fe3ec\n",
+      "- 7df249527c63\n",
+      "- 89bd631d1769\n",
+      "- 89c7daa72eee\n",
+      "- 8a22387617c3\n",
+      "- 8b159a98f485\n",
+      "- 8e32047cbc1f\n",
+      "- 91cb6c98201f\n",
+      "- 9b9cd7b7af8c\n",
+      "- a167532acca2\n",
+      "- a3e59c2ce3f6\n",
+      "- a596ad0b82aa\n",
+      "- a81f4472c637\n",
+      "- a88088855de5\n",
+      "- aa81faa78747\n",
+      "- aed3850f65f0\n",
+      "- b7188813d58a\n",
+      "- b737f8c78ec5\n",
+      "- bccf2f2819f8\n",
+      "- bfa54bd26187\n",
+      "- c3072a759efb\n",
+      "- c7b2155a4a47\n",
+      "- c908a0ad3e31\n",
+      "- ca732a3c37f7\n",
+      "- cf13ed7e457a\n",
+      "- d25e479ecbb7\n",
+      "- d3dddd3c0e00\n",
+      "- d5e47b94477e\n",
+      "- dc80ca623d71\n",
+      "- e0686434d029\n",
+      "- e1f5abb82285\n",
+      "- e2b60820c325\n",
+      "- e34b496b84ce\n",
+      "- e4500e7e19e1\n",
+      "- ee4e0e3afd3d\n",
+      "- eef041dd50aa\n",
+      "- f88e18cb4100\n",
+      "- f8a8da8bdd00\n",
+      "- fb223ed2278c\n",
+      "- fe90110788d2\n",
+      "\n",
+      "- 038441c925bb\n",
+      "- 0cfc06c129cc\n",
+      "- 0ec9fc461819\n",
+      "- 0ef7d94fde99\n",
+      "- 0f572d690310\n",
+      "- 1087d7b0ff2e\n",
+      "- 1319a1935f48\n",
+      "- 13b4d6a01d27\n",
+      "- 148471991ffb\n",
+      "- 1b92be89db4c\n",
+      "- 2cd2340ca14d\n",
+      "- 2e9ced2c7976\n",
+      "- 2f7504d0f426\n",
+      "- 2fc653ca75c7\n",
+      "- 3318a0e3ed6f\n",
+      "- 35826366dfc7\n",
+      "- 390b487231ce\n",
+      "- 3be1545083b7\n",
+      "- 3be2f86c3e45\n",
+      "- 40dce6018935\n",
+      "- 44a41bba1ee7\n",
+      "- 44d8c02b369e\n",
+      "- 4b45c36f8f5a\n",
+      "- 51c49c540b4e\n",
+      "- 5c55a5e717d6\n",
+      "- 5e816f11f5c3\n",
+      "- 601559e1777d\n",
+      "- 60e51cad2ffb\n",
+      "- 653622ac8363\n",
+      "- 655f19eabf1e\n",
+      "- 694faf956ebf\n",
+      "- 73fb772e50fb\n",
+      "- 752900afe3a6\n",
+      "- 77ca4db83644\n",
+      "- 785c9ca4eff7\n",
+      "- 854206f602d0\n",
+      "- 8877a6586606\n",
+      "- 8b8b9e29171c\n",
+      "- 8becc76ea607\n",
+      "- 8f6f15b9f598\n",
+      "- 90eac42a9ec9\n",
+      "- 927dd0c35dfd\n",
+      "- 939932f1822d\n",
+      "- 971207c6a525\n",
+      "- 9fbdeffbe2ba\n",
+      "- a4e48102f402\n",
+      "- a681f9b04b21\n",
+      "- a9e5f5314bcb\n",
+      "- b84960841a75\n",
+      "- bfe41e96d12f\n",
+      "- c107b5789660\n",
+      "- c75b4b207bea\n",
+      "- c8053490cec2\n",
+      "- ce85771a714c\n",
+      "- cfeb11428dd7\n",
+      "- d515236bdeec\n",
+      "- d5be621fd9aa\n",
+      "- d8de352c2657\n",
+      "- d9e887091a5c\n",
+      "- de6fedfb6139\n",
+      "- df33ae359fb5\n",
+      "- e0d7b0dcf9f3\n",
+      "- e11b9d69f856\n",
+      "- e2a849d283c0\n",
+      "- e586cbfa7762\n",
+      "- e867b5133665\n",
+      "- eec197a4bdca\n",
+      "- efbfc4526d58\n",
+      "- f0482490923c\n",
+      "- f56824b503a0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res)"
    ]
   },
   {
